# juanjah

./: .gitignore  CMakeLists.txt  README.md  memory.md
.github/workflows/: build.yml
source/: DelayLine.h  Distortion.h  LFO.h  OnePoleFilter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
